# flowManager

./: .gitignore  README.md  pyproject.toml  test-report.xml
docs/: README.md
docs/analysis/: agent_isolation.md  fractal_workflow_design.md  language_strategy_python_vs_rust.md  qa_gap_fix_plan.md  qa_paranoid_audit_findings.md  qa_paranoid_audit_finish.md  rag_system_design.md  roadmap.md  v_next_architecture_proposal.md  v_next_implementation_plan.md
docs/archive/: initial_review.md  part1_current_state_assessment.md  part4_development_plan_format.md  part6_analysis_process_framework.md  part7_implementation_language.md  part9_synthesis_and_optimizations.md
docs/protocols/: 01_Agent_Orchestration.md  02_Flow_Engine.md  03_Cognitive_Layer.md  04_Tooling_System.md  05_Lifecycle_Management.md
docs/specs/: 01_02_status_domain_spec.md  01_02_status_parser_spec.md  01_02_test_inventory.md  01_02b_status_persister_spec.md  01_03_engine_core_spec.md  01_03_test_inventory.md  01_04_tooling_spec.md  status_parser_spec.md  test_inventory_1_2.md
scripts/: run_suite.ps1
tests/integration/: test_lifecycle.py  test_resilience_real.py
tests/quality/: test_standards.py
tests/tools/: run_engine_task.py
workflow_core/: ARCHITECTURE.md  README.md  test.sh  test_all_services.sh  validate.sh
workflow_core/audit/: incident_2025_12_30_validate_bypass.md
workflow_core/config/: README.md  atoms.json  core_mappings.json  core_routes.json  core_teams.json  core_topics.json  expert_personas.json  flow_config.json  flow_config.json.bak  messages.json  modules.json  rules.json  (+4 more)
(+154 files in other folders)
